--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
                                 <img class="skill" src="postgresql.svg" alt="PostgresSQL" srcset="">
                                 <img class="skill" src="html5.svg" alt="HTML5" srcset="">
                                 <img class="skill" src="css3.svg" alt="CSS3" srcset="">
-
-
                             </div>
+                            <div class="text-block">
+                                <h5>Outside of Code</h5>
+                                <p> When I’m not at my computer I like to spend my time snowboarding, traveling and
+                                    seeing live music.</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -99,7 +103,8 @@
                         <div class="col-md-4 masonry__item">
                             <div class="card card-2 text-center">
                                 <div class="card__top">
-                                    <a href="#"> <img class='projimage' alt="Image" src="soundfi.png"> </a>
+                                    <a href="https://sound-fi.herokuapp.com/"> <img class='projimage' alt="Image"
+                                            src="soundfi.png"> </a>
                                 </div>
                                 <div class="card__body">
                                     <h4>Sound Fi</h4> <span class="type--fade">Soundcloud Clone</span>
@@ -126,7 +131,8 @@
                         <div class="col-md-4 masonry__item">
                             <div class="card card-2 text-center">
                                 <div class="card__top">
-                                    <a href="#"> <img class='projimage' alt="Image" src="zing.png"> </a>
+                                    <a href="https://app-zing.herokuapp.com/"> <img class='projimage' alt="Image"
+                                            src="zing.png"> </a>
                                 </div>
                                 <div class="card__body">
                                     <h4>Zing</h4> <span class="type--fade">Slack Clone</span>
@@ -152,7 +158,8 @@
                         <div class="col-md-4 masonry__item">
                             <div class="card card-2 text-center">
                                 <div class="card__top"> <span class="label">Most Recent</span>
-                                    <a href="#"> <img class='projimage' alt="Image" src="kostco.png"> </a>
+                                    <a href="https://kostcoconnect.herokuapp.com/"> <img class='projimage' alt="Image"
+                                            src="kostco.png"> </a>
                                 </div>
                                 <div class="card__body">
                                     <h4>Kostco Connect</h4> <span class="type--fade">Warehouse Ticket System</span>
