--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="resume.pdf" class="block inner-link" target="_blank">
                             <div class="feature boxed boxed--border border--round resume"> <i
                                     class="material-icons icon--lg">picture_as_pdf</i> <span class="h5 color--primary">
-                                    <p>CV</p>
+                                    <p>Resume</p>
                                 </span> </div>
                         </a>
                     </div>
